--- a/index.html
+++ b/index.html
@@ -66,10 +66,70 @@
             </div>
         </div>
         <div class="midle">
-            <div class="accommodation">
+            <div class="accommodation_popular">
+                <div class="accommodation">
+                    <div class="room_title">
+                    <p>Hébergements à Marseille</p>
+                    </div>
+                    <div class="room_box_x3">
+                    <article class=room>room1</article>
+                    <article class=room>room2</article>
+                    <article class=room>room3</article>
+                    </div>
+                    <div class="room_box_x3">
+                    <article class=room>room4</article>
+                    <article class=room>room5</article>
+                    <article class=room>room6</article>
+                    </div>
+                </div>
+                <div class="popular">
+                    <div class="popular_title">
+                        <p>Les plus populaires</p>
+                        <div class="popular_title_logo"><i class="fas fa-chart-line"></i></div>
+                    </div>
+                    <div class="popular_box_x3">
+                            <article class=popular>room1</article>
+                            <article class=popular>room2</article>
+                            <article class=popular>room3</article>
+                </div>
 
             </div>
         </div>
-
+        </div>
+        <div class="bot">
+            <h2>Activités à Marseille</h2>
+            <article class="activity_solo">Vieux Port</article>
+            <article class="activity_duo">Fort de Pomègues</article>
+            <article class="activity_duo">Îles du Frioul</article>
+            <article class="activity_solo">Parc National des Calanques</article>
+            <article class="activity_duo">Notre-Dame-de-la-Garde</article>
+            <article class="activity_duo">Parc Longchamp</article>
+        </div>
     </Main>
+    <footer>
+        <div class="footer">
+            <div class="about">
+                <h4>A Propos</h4>
+                <ul>
+                    <li>Fonctionement du site</li>
+                    <li>Conditions générales de vente</li>
+                    <li>Données et confidentialité</li>
+                </ul>
+            </div>
+            <div class="about2">
+                <h4>Nos hébergements</h4>
+                <ul>
+                    <li>Charte qualité</li>
+                    <li>Soumettre votre hôtel</li>
+                </ul>
+            </div>
+            <div class="about_3">
+                <h4>Assistance</h4>
+                <ul>
+                    <li>Centre d'aide</li>
+                    <li>Nous contacter</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
