--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <Main>
         <div class="top">
             <h1>Trouvez votre hébergement pour des vancances de rêve</h1>
-            <h4>En plein centre ville ou en pleine nature</h4>
+            <p>En plein centre ville ou en pleine nature</p>
             <div class="research_bloc">
                 <div class="research_location">
                     <i class="fas fa-map-marker-alt"></i>
@@ -37,9 +37,8 @@
                 <button class="research_button"> Rechercher<!--<i class="fas fa-search"></i> A VOIR --></button>
             </div>
             <div class="filter_bloc">
-                <div class="filter_title">
-                    <p>Filtres</p>
-                </div>
+                    <p class="filter_title">Filtres</p>
+                    
                     <div class="filter">
                         <div class="filter_logo"><i class="fas fa-money-bill-wave"></i></div>
                         <p>Économique</p>
@@ -70,25 +69,108 @@
                     <p>Hébergements à Marseille</p>
                     </div>
                     <div class="room_box_x3">
-                    <article class=room>room1</article>
-                    <article class=room>room2</article>
-                    <article class=room>room3</article>
+                    <article class=room>
+                        <img src="./images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
+                        <h4>Auberge La Cannebière</h4>
+                        <p>Nuit à partir de <span>25€</span></p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <div class="stars_empty"><i class="fas fa-star"></i></div>
+                    </article>
+                    <article class=room>
+                        <img src="./images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                        <h4>Hôtel du port</h4>
+                        <p>Nuit à partir de <span>52€</span></p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </article>
+                    <article class=room>
+                        <img src="./images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
+                        <h4>Hôtel les mouettes</h4>
+                        <p>Nuit à partir de <span>76€</span></p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <div class="stars_empty"><i class="fas fa-star"></i></div>
+                    </article>
                     </div>
                     <div class="room_box_x3">
-                    <article class=room>room4</article>
-                    <article class=room>room5</article>
-                    <article class=room>room6</article>
+                    <article class=room>
+                        <img src="./images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                        <h4>Hôtel de la mer</h4>
+                        <p>Nuit à partir de <span>46€</span></p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <div class="stars_empty"><i class="fas fa-star"></i></div>
+                        <div class="stars_empty"><i class="fas fa-star"></i></div>
+                    </article>
+                    <article class=room>
+                        <img src="./images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
+                        <h4>Auberge le Panier</h4>
+                        <p>Nuit à partir de <span>23€</span></p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <div class="stars_empty"><i class="fas fa-star"></i></div>
+                    </article>
+                    <article class=room>
+                        <img src="./images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel chez Amina">
+                        <h4>Hôtel chez Anima</h4>
+                        <p>Nuit à partir de <span>76€</span></p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </article>
                     </div>
                 </div>
+                <a href="#">Afficher plus</a>
                 <div class="popular">
                     <div class="popular_title">
                         <p>Les plus populaires</p>
-                        <div class="popular_title_logo"><i class="fas fa-chart-line"></i></div>
+                        <i class="fas fa-chart-line"></i>
                     </div>
                     <div class="popular_box_x3">
-                            <article class=popular>room1</article>
-                            <article class=popular>room2</article>
-                            <article class=popular>room3</article>
+                            <article class=popular>
+                                <img src="./images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                                <h4>Hôtel Le soleil du matin</h4>
+                                <p>Nuit à partir de <span>128€</span></p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </article>
+                            <article class=popular>
+                                <img src="./images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au cœur de l'eau Chambre d'hôtes ">
+                                <h4>Au cœur de l'eau Chambres d'hôtes</h4>
+                                <p>Nuit à partir de <span>71€</span></p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <div class="stars_empty"><i class="fas fa-star"></i></div>
+                            </article>
+                            <article class=popular>
+                                <img src="./images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc">
+                                <h4>Hôtel Tout bleu et Blanc</h4>
+                                <p>Nuit à partir de <span>68€</span></p>
+                                <p>Nuit à partir de <span>71€</span></p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <div class="stars_empty"><i class="fas fa-star"></i></div>
+                           </article>
                 </div>
 
             </div>
@@ -96,12 +178,30 @@
         </div>
         <div class="bot">
             <h2>Activités à Marseille</h2>
-            <article class="activity_solo">Vieux Port</article>
-            <article class="activity_duo">Fort de Pomègues</article>
-            <article class="activity_duo">Îles du Frioul</article>
-            <article class="activity_solo">Parc National des Calanques</article>
-            <article class="activity_duo">Notre-Dame-de-la-Garde</article>
-            <article class="activity_duo">Parc Longchamp</article>
+            <article class="activity_solo">
+                <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
+                <h4>Vieux Port</h4>
+            </article>
+            <article class="activity_duo">
+                <img src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                <h4>Fort de Pomègues</h4>
+            </article>
+            <article class="activity_duo">
+                <img src="./images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
+                <h4>Îles du Frioul</h4>
+            </article>
+            <article class="activity_solo">
+                <img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
+                <h4>Parc National des Calanques</h4>
+            </article>
+            <article class="activity_duo">
+                <img src="./images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                <h4>Notre-Dame-de-la-Garde</h4>
+            </article>
+            <article class="activity_duo">
+                <img src="./images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                <h4>Parc Longchamp</h4>
+            </article>
         </div>
     </Main>
     <footer>
