--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </a>
 
                 <ul>
-                    <li><a class="nav-link" href="#H">Hébergements</a></li>
-                    <li><a class="nav-link" href="#A">Activité</a></li>
+                    <li><a class="nav-link" href="#hotels">Hébergements</a></li>
+                    <li><a class="nav-link" href="#activities">Activités</a></li>
                 </ul>
             </nav>
             <section class="search">
@@ -31,11 +31,10 @@
                 </div>
                 <div class="search-interface">
                     <form class="search-form" action="">
-                        <i class="fas fa-map-marker-alt"></i>
+                        <i class="fas fa-map-marker-alt" id="test"></i>
                         <input class="search-interface-input" type="search" placeholder="Marseille , France">
                         <button class="search-interface-button-desktop" type="submit"> Rechercher </button>
-                        <button class="search-interface-button-mobile" type="submit"><i
-                                class="fas fa-search"></i></button>
+                        <button class="search-interface-button-mobile" type="submit"><i class="fas fa-search"></i></button>
                     </form>
                 </div>
                 <div class="search-filtres">
@@ -54,7 +53,7 @@
                     </button>
                     <button type="button">
                         <i class="fas fa-dog"></i>
-                        <p>Animaux</p>
+                        <p>Animaux autorisés</p>
                     </button>
 
                 </div>
@@ -65,7 +64,7 @@
             </section>
         </header>
         <main>
-            <div class="hotels">
+            <div class="hotels" id="hotels">
                 <div class="hebergements">
                     <h2 class="hebergement-h2">Hébergements à Marseille</h2>
                     <div class="hebergements-cards">
@@ -76,7 +75,7 @@
                                 <div class="hebergements-description">
                                     <div class="hebergements-description-header">
                                         <h2>Auberge La Cannebières</h2>
-                                        <p>Nuit à partir de<span>25€</span></p>
+                                        <p>Nuit à partir de <span>25€</span></p>
                                     </div>
                                     <div class="hebergements-review">
                                         <i class="fas fa-star"></i>
@@ -100,7 +99,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
-                                        <i class="fas fa-star grey"></i>
+                                        <i class="fas fa-star"></i>
                                     </div>
                                 </div>
                             </a>
@@ -129,13 +128,13 @@
                                 <div class="hebergements-description">
                                     <div class="hebergements-description-header">
                                         <h2>Auberge le Panier</h2>
-                                        <p>Nuit à partir de 46<span>€</span>/p>
+                                        <p>Nuit à partir de 46<span>€</span></p>
                                     </div>
                                     <div class="hebergements-review">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star grey"></i>
                                         <i class="fas fa-star grey"></i>
                                     </div>
                                 </div>
@@ -158,7 +157,7 @@
                                 </div>
                             </a>
                             <a href="#">
-                                <img src="./images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                                <img src="./images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                     alt="Hôtel chez Amina">
                                 <div class="hebergements-description">
                                     <div class="hebergements-description-header">
@@ -170,13 +169,13 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
-                                        <i class="fas fa-star grey"></i>
+                                        <i class="fas fa-star"></i>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                        <a href="#">Afficher plus </a>
                     </div>
+                    <a class="afficher" href="#">Afficher plus </a>
                 </div>
                 <div class="populaires">
                     <div class="populaires-header">
@@ -198,7 +197,7 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
-                                    <i class="fas fa-star grey"></i>
+                                    <i class="fas fa-star"></i>
                                 </div>
                             </div>
                         </a>
@@ -239,7 +238,7 @@
 
                 </div>
             </div>
-            <div class="actvities">
+            <div class="activities" id="activities">
                 <h2>Activités à Marseille</h2>
                 <div class="activities-cards">
                     <a href="#" class="vieuxport">
